# BallTree-KNN

./: CMakeLists.txt  README.md
include/: BallTree.hpp  Point.hpp  utilities.hpp
src/: BallTree.cpp  utilities.cpp
tests/: test_ball_tree.cpp  test_centroid_calc.cpp  test_utilities.cpp
